# mero-react

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.html  contexts.html  flows.html  hooks.html  index.html  nav.js  permissions.html  provider.html  sso.html  storage.html  styles.css
example/: DEVELOPMENT.md  README.md  package.json  pnpm-lock.yaml
example/app/: package-lock.json  package.json  pnpm-lock.yaml
example/app/src/: App.tsx
example/app/src/api/: AbiClient.ts
example/app/src/features/kv/api/: index.ts
example/app/src/pages/home/: index.tsx
example/app/src/pages/login/: Authenticate.tsx
example/logic/: Cargo.toml  manifest.json
example/scripts/: on-res-change.mjs  registry-sync.sh
example/workflows/: workflow-example.yml
src/: index.ts  types.ts
src/components/: ConnectButton.tsx  LoginModal.tsx  index.ts  styles.css
src/context/: MeroContext.tsx  index.ts
src/hooks/: index.test.tsx  index.ts
src/storage/: index.ts
